--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -2,8 +2,9 @@
     display: flex
     justify-content: center
     position: fixed
-    height: 70%
-    width: 80%
+    left: 0px
+    height: 100%
+    width: 100%
     background-image: url(/textures/tablet.png)
     background-size: 100% 100%
     z-index: 2
@@ -11,9 +12,51 @@
         display: flex
         position: fixed
         align-self: center
-        height: 60%
-        width: 75%
+        height: 90%
+        width: 90%
         background-color: white
+        z-index: 5
+        #instruction
+            margin: 20px
+            font-size: 20px
+            text-transform: uppercase
+        #minimap
+            position: absolute
+            height: 250px
+            width: 250px
+            bottom: 25px
+            right: 50px
+            background-image: url(/textures/mini_map_cam1.png)
+            background-size: 100%
+            #cam1
+                position: absolute
+                bottom: 33.6%
+                right: 67%
+                height: 91px
+                width: 30px
+                background-color: transparent
+            #cam2
+                position: absolute
+                bottom: 28.9%
+                right: 4.9%
+                height: 65px
+                width: 65px
+                background-color: transparent
+            #cam3
+                position: absolute
+                bottom: 58.9%
+                right: 4.6%
+                height: 67px
+                width: 67px
+                background-color: transparent
+            #cam4
+                position: absolute
+                bottom: 74.3%
+                right: 55.7%
+                height: 31px
+                width: 78px
+                background-color: transparent
+
         #counter1
             align-self: flex-end
             font-size: 30px
@@ -30,4 +73,32 @@
             align-self: flex-start
             font-size: 30px
             margin: 30px
-            
+
+    #cam_screen1
+        position: fixed
+        align-self: center
+        height: 90%
+        width: 90%
+        background-color: white
+        opacity: 0
+    #cam_screen2
+        position: fixed
+        align-self: center
+        height: 90%
+        width: 90%
+        background-color: white
+        opacity: 0
+    #cam_screen3
+        position: fixed
+        align-self: center
+        height: 90%
+        width: 90%
+        background-color: white
+        opacity: 0
+    #cam_screen4
+        position: fixed
+        align-self: center
+        height: 90%
+        width: 90%
+        background-color: white
+        opacity: 0
