--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -6,12 +6,13 @@
       -ms-flex-pack: center;
           justify-content: center;
   position: fixed;
+  top: 0px;
   left: 0px;
   height: 100%;
   width: 100%;
   background-image: url(/textures/tablet.png);
   background-size: 100% 100%;
-  z-index: 2;
+  z-index: 10;
 }
 
 #tablet #screen {
@@ -21,16 +22,19 @@
   position: fixed;
   -ms-flex-item-align: center;
       align-self: center;
-  height: 90%;
-  width: 90%;
+  top: 0px;
+  left: 0px;
+  height: 45%;
+  width: 40%;
   background-color: white;
-  z-index: 5;
+  z-index: 1;
 }
 
 #tablet #screen #instruction {
   margin: 20px;
   font-size: 20px;
   text-transform: uppercase;
+  z-index: 2;
 }
 
 #tablet #screen #minimap {
@@ -44,39 +48,43 @@
 }
 
 #tablet #screen #minimap #cam1 {
-  position: absolute;
+  position: fixed;
   bottom: 33.6%;
   right: 67%;
   height: 91px;
   width: 30px;
   background-color: transparent;
+  z-index: 10;
 }
 
 #tablet #screen #minimap #cam2 {
-  position: absolute;
+  position: fixed;
   bottom: 28.9%;
   right: 4.9%;
   height: 65px;
   width: 65px;
   background-color: transparent;
+  z-index: 10;
 }
 
 #tablet #screen #minimap #cam3 {
-  position: absolute;
+  position: fixed;
   bottom: 58.9%;
   right: 4.6%;
   height: 67px;
   width: 67px;
   background-color: transparent;
+  z-index: 10;
 }
 
 #tablet #screen #minimap #cam4 {
-  position: absolute;
+  position: fixed;
   bottom: 74.3%;
   right: 55.7%;
   height: 31px;
   width: 78px;
   background-color: transparent;
+  z-index: 10;
 }
 
 #tablet #screen #counter1 {
@@ -112,10 +120,12 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  height: 90%;
-  width: 90%;
-  background-color: white;
-  opacity: 0;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-image: url(/textures/cam_room_without_animatronic/room_cam1.png);
+  background-size: cover;
+  z-index: 1;
 }
 
 #tablet #cam_screen2 {
