--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -2,47 +2,43 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: absolute;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  position: fixed;
   top: 0px;
   left: 0px;
   height: 100%;
   width: 100%;
   background-image: url(/textures/tablet.png);
   background-size: 100% 100%;
-  z-index: 10;
 }
 
 #tablet #screen {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: fixed;
+  position: absolute;
   -ms-flex-item-align: center;
       align-self: center;
-  top: 0px;
-  left: 0px;
-  height: 45%;
-  width: 40%;
-  background-color: white;
-  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-color: #ffffff6a;
+  z-index: -1;
 }
 
 #tablet #screen #instruction {
-  margin: 20px;
+  margin: 100px;
   font-size: 20px;
   text-transform: uppercase;
-  z-index: 2;
 }
 
 #tablet #screen #minimap {
   position: absolute;
   height: 250px;
   width: 250px;
-  bottom: 25px;
-  right: 50px;
+  bottom: 60px;
+  right: 100px;
   background-image: url(/textures/mini_map_cam1.png);
   background-size: 100%;
 }
