--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -1,35 +1,31 @@
 #tablet 
     display: flex
+    position: absolute
     justify-content: center
-    position: fixed
     top: 0px
     left: 0px
     height: 100%
     width: 100%
     background-image: url(/textures/tablet.png)
     background-size: 100% 100%
-    z-index: 10
     #screen
         display: flex
-        position: fixed
+        position: absolute
         align-self: center
-        top: 0px
-        left: 0px
-        height: 45%
-        width: 40%
-        background-color: white
-        z-index: 1
+        height: 100%
+        width: 100%
+        background-color: #ffffff6a
+        z-index: -1
         #instruction
-            margin: 20px
+            margin: 100px
             font-size: 20px
             text-transform: uppercase
-            z-index: 2
         #minimap
             position: absolute
             height: 250px
             width: 250px
-            bottom: 25px
-            right: 50px
+            bottom: 60px
+            right: 100px
             background-image: url(/textures/mini_map_cam1.png)
             background-size: 100%
             #cam1
