--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -44,42 +44,42 @@
 }
 
 #tablet #screen #minimap #cam1 {
-  position: fixed;
-  bottom: 33.6%;
-  right: 67%;
-  height: 91px;
-  width: 30px;
-  background-color: transparent;
+  position: absolute;
+  bottom: 32.5%;
+  right: 66.5%;
+  height: 135px;
+  width: 45px;
+  background-color: #9b19199c;
   z-index: 10;
 }
 
 #tablet #screen #minimap #cam2 {
-  position: fixed;
-  bottom: 28.9%;
-  right: 4.9%;
-  height: 65px;
-  width: 65px;
-  background-color: transparent;
+  position: absolute;
+  bottom: 73.35%;
+  right: 55%;
+  height: 50px;
+  width: 115px;
+  background-color: #9b19199c;
   z-index: 10;
 }
 
 #tablet #screen #minimap #cam3 {
-  position: fixed;
-  bottom: 58.9%;
-  right: 4.6%;
-  height: 67px;
-  width: 67px;
-  background-color: transparent;
+  position: absolute;
+  bottom: 27.75%;
+  right: 3.75%;
+  height: 97.5px;
+  width: 100px;
+  background-color: #9b19199c;
   z-index: 10;
 }
 
 #tablet #screen #minimap #cam4 {
-  position: fixed;
-  bottom: 74.3%;
-  right: 55.7%;
-  height: 31px;
-  width: 78px;
-  background-color: transparent;
+  position: absolute;
+  bottom: 57.85%;
+  right: 3.65%;
+  height: 100px;
+  width: 100px;
+  background-color: #9b19199c;
   z-index: 10;
 }
 
