--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -23,7 +23,7 @@
       align-self: center;
   height: 100%;
   width: 100%;
-  background-color: #ffffffc9;
+  background-color: #ffffff;
   z-index: -1;
 }
 
@@ -50,7 +50,6 @@
   height: 135px;
   width: 45px;
   background-color: #9b19199c;
-  z-index: 10;
 }
 
 #tablet #screen #minimap #cam2 {
@@ -60,7 +59,6 @@
   height: 50px;
   width: 115px;
   background-color: #9b19199c;
-  z-index: 10;
 }
 
 #tablet #screen #minimap #cam3 {
@@ -70,7 +68,6 @@
   height: 97.5px;
   width: 100px;
   background-color: #9b19199c;
-  z-index: 10;
 }
 
 #tablet #screen #minimap #cam4 {
@@ -80,7 +77,6 @@
   height: 100px;
   width: 100px;
   background-color: #9b19199c;
-  z-index: 10;
 }
 
 #tablet #screen #counter1 {
