--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -14,7 +14,7 @@
         align-self: center
         height: 100%
         width: 100%
-        background-color: #ffffffc9
+        background-color: #ffffff
         z-index: -1
         #instruction
             margin: 100px
@@ -35,7 +35,6 @@
                 height: 135px
                 width: 45px
                 background-color: #9b19199c
-                z-index: 10
             #cam2
                 position: absolute
                 bottom: 73.35%
@@ -43,7 +42,6 @@
                 height: 50px
                 width: 115px
                 background-color: #9b19199c
-                z-index: 10
             #cam3
                 position: absolute
                 bottom: 27.75%
@@ -51,7 +49,6 @@
                 height: 97.5px
                 width: 100px
                 background-color: #9b19199c
-                z-index: 10
             #cam4
                 position: absolute
                 bottom: 57.85%
@@ -59,7 +56,6 @@
                 height: 100px
                 width: 100px
                 background-color: #9b19199c
-                z-index: 10
 
         #counter1
             align-self: flex-end
