--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -14,10 +14,10 @@
         align-self: center
         height: 100%
         width: 100%
-        background-color: #ffffff
+        background-color: #a40c0c
         z-index: -1
         #instruction
-            margin: 100px
+            margin: 85px
             font-size: 20px
             text-transform: uppercase
         #minimap
