--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -1,6 +1,6 @@
 #tablet 
     display: flex
-    position: absolute
+    position: fixed
     justify-content: center
     top: -1000px
     left: 0px
@@ -12,12 +12,11 @@
         display: flex
         position: absolute
         align-self: center
-        height: 100%
-        width: 100%
-        background-color: #a40c0c
-        z-index: -1
+        height: 95%
+        width: 95%
+        background-color: #a40c0c47
         #instruction
-            margin: 85px
+            margin: 25px
             font-size: 20px
             text-transform: uppercase
         #minimap
@@ -28,51 +27,55 @@
             right: 100px
             background-image: url(/textures/mini_map_cam1.png)
             background-size: 100%
-            #cam1
+            #cam1_tile
                 position: absolute
                 bottom: 32.5%
                 right: 66.5%
                 height: 135px
                 width: 45px
                 background-color: #9b19199c
-            #cam2
+                z-index: 10
+            #cam2_tile
                 position: absolute
                 bottom: 73.35%
                 right: 55%
                 height: 50px
                 width: 115px
                 background-color: #9b19199c
-            #cam3
+                z-index: 10
+            #cam3_tile
                 position: absolute
                 bottom: 27.75%
                 right: 3.75%
                 height: 97.5px
                 width: 100px
                 background-color: #9b19199c
-            #cam4
+                z-index: 10
+            #cam4_tile
                 position: absolute
                 bottom: 57.85%
                 right: 3.65%
                 height: 100px
                 width: 100px
                 background-color: #9b19199c
+                cursor: pointer
 
         #counter1
             align-self: flex-end
             font-size: 30px
-            margin: 30px
+            margin: 80px
         #counter2
             align-self: flex-end
             font-size: 30px
-            margin: 30px
+            margin: 80px
         #counter3
             align-self: flex-start
             font-size: 30px
-            margin: 30px
+            margin: 80px
         #counter4
             align-self: flex-start
             font-size: 30px
-            margin: 30px
+            margin: 80px
 
     #cam_screen1
         position: fixed
