--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -49,7 +49,8 @@
   height: 135px;
   width: 45px;
   background-color: #9b19199c;
-  z-index: 10;
+  cursor: pointer;
+  z-index: 1;
 }
 
 #tablet #screen #minimap #cam2_tile {
@@ -59,7 +60,7 @@
   height: 50px;
   width: 115px;
   background-color: #9b19199c;
-  z-index: 10;
+  z-index: 1;
 }
 
 #tablet #screen #minimap #cam3_tile {
@@ -69,7 +70,7 @@
   height: 97.5px;
   width: 100px;
   background-color: #9b19199c;
-  z-index: 10;
+  z-index: 1;
 }
 
 #tablet #screen #minimap #cam4_tile {
