--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -34,7 +34,8 @@
                 height: 135px
                 width: 45px
                 background-color: #9b19199c
-                z-index: 10
+                cursor: pointer
+                z-index: 1
             #cam2_tile
                 position: absolute
                 bottom: 73.35%
@@ -42,7 +43,7 @@
                 height: 50px
                 width: 115px
                 background-color: #9b19199c
-                z-index: 10
+                z-index: 1
             #cam3_tile
                 position: absolute
                 bottom: 27.75%
@@ -50,7 +51,7 @@
                 height: 97.5px
                 width: 100px
                 background-color: #9b19199c
-                z-index: 10
+                z-index: 1
             #cam4_tile
                 position: absolute
                 bottom: 57.85%
