--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -43,6 +43,7 @@
                 height: 50px
                 width: 115px
                 background-color: #9b19199c
+                cursor: pointer
                 z-index: 1
             #cam3_tile
                 position: absolute
@@ -51,6 +52,7 @@
                 height: 97.5px
                 width: 100px
                 background-color: #9b19199c
+                cursor: pointer
                 z-index: 1
             #cam4_tile
                 position: absolute
