--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -62,6 +62,7 @@
                 width: 100px
                 background-color: #9b19199c
                 cursor: pointer
+                z-index: 1
 
         #counter1
             align-self: flex-end
