--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -89,31 +89,35 @@
     height: 90%
     width: 90%
     background-color: red
-    opacity: 1
+    opacity: 0
     
 #cam_screen2
     position: absolute
     align-self: center
-    top: 50px
-    height: 10%
-    width: 10%
+    bottom: 5%
+    left: 5%
+    height: 90%
+    width: 90%
     background-color: yellow
     opacity: 0
     
 #cam_screen3
     position: absolute
     align-self: center
-    height: 10%
-    width: 10%
+    bottom: 5%
+    left: 5%
+    height: 90%
+    width: 90%
     background-color: green
     opacity: 0
     
 #cam_screen4
     position: absolute
     align-self: center
-    height: 80%
-    width: 50%
-    margin: 40px
+    bottom: 5%
+    left: 5%
+    height: 90%
+    width: 90%
     background-color: #069a727d
     opacity: 0
     
