--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -123,7 +123,7 @@
   height: 90%;
   width: 90%;
   background-color: red;
-  opacity: 1;
+  opacity: 0;
 }
 
 #cam_screen2 {
@@ -131,9 +131,10 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  top: 50px;
-  height: 10%;
-  width: 10%;
+  bottom: 5%;
+  left: 5%;
+  height: 90%;
+  width: 90%;
   background-color: yellow;
   opacity: 0;
 }
@@ -143,8 +144,10 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  height: 10%;
-  width: 10%;
+  bottom: 5%;
+  left: 5%;
+  height: 90%;
+  width: 90%;
   background-color: green;
   opacity: 0;
 }
@@ -154,9 +157,10 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  height: 80%;
-  width: 50%;
-  margin: 40px;
+  bottom: 5%;
+  left: 5%;
+  height: 90%;
+  width: 90%;
   background-color: #069a727d;
   opacity: 0;
 }
