--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -21,7 +21,7 @@
       align-self: center;
   height: 100%;
   width: 100%;
-  background-color: #0ca40c47;
+  background-color: #000000;
   z-index: -1;
 }
 
