--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -12,7 +12,7 @@
         align-self: center
         height: 100%
         width: 100%
-        background-color: #0ca40c47
+        background-color: #000000
         z-index: -1
         #instruction
             margin: 25px
