--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -32,7 +32,7 @@
                 right: 66.5%
                 height: 135px
                 width: 45px
-                background-color: #9b19199c
+                background-color: transparent
                 cursor: pointer
                 z-index: 1
             #cam2_tile
@@ -41,7 +41,7 @@
                 right: 55%
                 height: 50px
                 width: 115px
-                background-color: #9b19199c
+                background-color: transparent
                 cursor: pointer
                 z-index: 1
             #cam3_tile
@@ -50,7 +50,7 @@
                 right: 3.75%
                 height: 97.5px
                 width: 100px
-                background-color: #9b19199c
+                background-color: transparent
                 cursor: pointer
                 z-index: 1
             #cam4_tile
@@ -59,7 +59,7 @@
                 right: 3.65%
                 height: 100px
                 width: 100px
-                background-color: #9b19199c
+                background-color: transparent
                 cursor: pointer
                 z-index: 1
 
@@ -88,7 +88,7 @@
     left: 5%
     height: 90%
     width: 90%
-    background-color: red
+    background-color: #9bdd029a
     opacity: 0
     
 #cam_screen2
@@ -98,7 +98,7 @@
     left: 5%
     height: 90%
     width: 90%
-    background-color: yellow
+    background-color: #c40c5893
     opacity: 0
     
 #cam_screen3
@@ -108,7 +108,7 @@
     left: 5%
     height: 90%
     width: 90%
-    background-color: green
+    background-color: #1808908b
     opacity: 0
     
 #cam_screen4
