--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -6,7 +6,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  top: -1000px;
+  top: -10000px;
   left: 0px;
   height: 100%;
   width: 100%;
@@ -122,7 +122,8 @@
   left: 5%;
   height: 90%;
   width: 90%;
-  background-color: #9bdd029a;
+  background-color: url(/textures/room_without_animatronic/cam1_rom.png);
+  background-size: 100% 100%;
   opacity: 0;
 }
 
@@ -135,7 +136,8 @@
   left: 5%;
   height: 90%;
   width: 90%;
-  background-color: #c40c5893;
+  background-image: url(/textures/room_without_animatronic/cam2_rom.png);
+  background-size: 100% 100%;
   opacity: 0;
 }
 
@@ -148,7 +150,7 @@
   left: 5%;
   height: 90%;
   width: 90%;
-  background-color: #1808908b;
+  background-color: red;
   opacity: 0;
 }
 
