--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -2,7 +2,7 @@
     display: flex
     position: fixed
     justify-content: center
-    top: -1000px
+    top: -10000px
     left: 0px
     height: 100%
     width: 100%
@@ -88,7 +88,8 @@
     left: 5%
     height: 90%
     width: 90%
-    background-color: #9bdd029a
+    background-color: url(/textures/room_without_animatronic/cam1_rom.png)
+    background-size: 100% 100%
     opacity: 0
     
 #cam_screen2
@@ -98,7 +99,8 @@
     left: 5%
     height: 90%
     width: 90%
-    background-color: #c40c5893
+    background-image: url(/textures/room_without_animatronic/cam2_rom.png)
+    background-size: 100% 100%
     opacity: 0
     
 #cam_screen3
@@ -108,7 +110,7 @@
     left: 5%
     height: 90%
     width: 90%
-    background-color: #1808908b
+    background-color: red
     opacity: 0
     
 #cam_screen4
