--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -110,7 +110,8 @@
     left: 5%
     height: 90%
     width: 90%
-    background-color: red
+    background-image: url(/textures/room_without_animatronic/cam3_rom.png)
+    background-size: 100% 100%
     opacity: 0
     
 #cam_screen4
@@ -120,6 +121,7 @@
     left: 5%
     height: 90%
     width: 90%
-    background-color: #069a727d
+    background-image: url(/textures/room_without_animatronic/cam4_rom.png)
+    background-size: 100% 100%
     opacity: 0
     
