--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -150,7 +150,8 @@
   left: 5%;
   height: 90%;
   width: 90%;
-  background-color: red;
+  background-image: url(/textures/room_without_animatronic/cam3_rom.png);
+  background-size: 100% 100%;
   opacity: 0;
 }
 
@@ -163,7 +164,8 @@
   left: 5%;
   height: 90%;
   width: 90%;
-  background-color: #069a727d;
+  background-image: url(/textures/room_without_animatronic/cam4_rom.png);
+  background-size: 100% 100%;
   opacity: 0;
 }
 /*# sourceMappingURL=tablet.css.map */
