--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -21,7 +21,9 @@
       align-self: center;
   height: 100%;
   width: 100%;
-  background-color: #000000;
+  background-image: url(/textures/glitch_effect.gif);
+  background-size: 40%;
+  opacity: 0.65;
   z-index: -1;
 }
 
@@ -38,6 +40,7 @@
   bottom: 40px;
   right: 100px;
   background-image: url(/textures/mini_map_cam1.png);
+  opacity: 0.75;
   background-size: 100%;
 }
 
@@ -118,10 +121,8 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  bottom: 5%;
-  left: 5%;
-  height: 90%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   background-color: url(/textures/room_without_animatronic/cam1_rom.png);
   background-size: 100% 100%;
   opacity: 0;
@@ -132,10 +133,8 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  bottom: 5%;
-  left: 5%;
-  height: 90%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   background-image: url(/textures/room_without_animatronic/cam2_rom.png);
   background-size: 100% 100%;
   opacity: 0;
@@ -146,10 +145,8 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  bottom: 5%;
-  left: 5%;
-  height: 90%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   background-image: url(/textures/room_without_animatronic/cam3_rom.png);
   background-size: 100% 100%;
   opacity: 0;
@@ -160,10 +157,8 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  bottom: 5%;
-  left: 5%;
-  height: 90%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   background-image: url(/textures/room_without_animatronic/cam4_rom.png);
   background-size: 100% 100%;
   opacity: 0;
