--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -12,7 +12,9 @@
         align-self: center
         height: 100%
         width: 100%
-        background-color: #000000
+        background-image: url(/textures/glitch_effect.gif)
+        background-size: 40%
+        opacity: 0.65
         z-index: -1
         #instruction
             margin: 25px
@@ -25,6 +27,7 @@
             bottom: 40px
             right: 100px
             background-image: url(/textures/mini_map_cam1.png)
+            opacity: 0.75
             background-size: 100%
             #cam1_tile
                 position: absolute
@@ -84,10 +87,8 @@
 #cam_screen1
     position: absolute
     align-self: center
-    bottom: 5%
-    left: 5%
-    height: 90%
-    width: 90%
+    height: 100%
+    width: 100%
     background-color: url(/textures/room_without_animatronic/cam1_rom.png)
     background-size: 100% 100%
     opacity: 0
@@ -95,10 +96,8 @@
 #cam_screen2
     position: absolute
     align-self: center
-    bottom: 5%
-    left: 5%
-    height: 90%
-    width: 90%
+    height: 100%
+    width: 100%
     background-image: url(/textures/room_without_animatronic/cam2_rom.png)
     background-size: 100% 100%
     opacity: 0
@@ -106,10 +105,8 @@
 #cam_screen3
     position: absolute
     align-self: center
-    bottom: 5%
-    left: 5%
-    height: 90%
-    width: 90%
+    height: 100%
+    width: 100%
     background-image: url(/textures/room_without_animatronic/cam3_rom.png)
     background-size: 100% 100%
     opacity: 0
@@ -117,10 +114,8 @@
 #cam_screen4
     position: absolute
     align-self: center
-    bottom: 5%
-    left: 5%
-    height: 90%
-    width: 90%
+    height: 100%
+    width: 100%
     background-image: url(/textures/room_without_animatronic/cam4_rom.png)
     background-size: 100% 100%
     opacity: 0
