--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -69,10 +69,12 @@
         #counter1
             align-self: flex-end
             font-size: 30px
+            color: white
             margin: 80px
         #counter2
             align-self: flex-end
             font-size: 30px
+            color: white
             margin: 80px
         #counter3
             align-self: flex-start
@@ -81,6 +83,7 @@
         #counter4
             align-self: flex-start
             font-size: 30px
+            color: white
             margin: 80px
 
 
