--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -17,8 +17,8 @@
         opacity: 0.65
         z-index: -1
         #instruction
-            margin: 25px
-            font-size: 20px
+            font-size: 30px
+            color: white
             text-transform: uppercase
         #minimap
             position: absolute
@@ -71,6 +71,7 @@
             font-size: 30px
             color: white
             margin: 80px
+            opacity: 0
         #counter2
             align-self: flex-end
             font-size: 30px
