--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -28,8 +28,8 @@
 }
 
 #tablet #screen #instruction {
-  margin: 25px;
-  font-size: 20px;
+  font-size: 30px;
+  color: white;
   text-transform: uppercase;
 }
 
@@ -94,6 +94,7 @@
   font-size: 30px;
   color: white;
   margin: 80px;
+  opacity: 0;
 }
 
 #tablet #screen #counter2 {
