--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -9,18 +9,40 @@
     z-index: 1
     #screen
         display: flex
-        position: fixed
+        position: relative
         align-self: center
         height: 100%
         width: 100%
         background-image: url(/textures/glitch_effect.gif)
         background-size: 40%
         opacity: 1
+        #white-stripe
+            position: absolute
+            margin: 2.5%
+            height: 90vh
+            width: 95vw
+            border: 5px solid #fff
+            border-radius: 0px
+            z-index: 1
+            opacity: 0.75
+        #rec_rectangle
+            position: absolute
+            top: 6.5%
+            right: 4.5%
+            height: 100px
+            width: 100px
+            border-radius: 50%
+            background-color: red
+            animation: recording 2s infinite
+            z-index: 1
+            opacity: 0.75
         #instruction
-            margin: 1.5%
+            margin: 3.5%
+            font-family: 'Source Code Pro', monospace
             font-size: 50px
             color: white
             text-transform: uppercase
+            z-index: 1
         #minimap
             position: absolute
             height: 350px
@@ -30,6 +52,7 @@
             background-image: url(/textures/mini_map_cam1.png)
             opacity: 0.75
             background-size: 100%
+            z-index: 2
             #cam1_tile
                 position: absolute
                 bottom: 32.5%
@@ -131,3 +154,19 @@
     background-size: 100% 100%
     opacity: 0
     
+@keyframes recording
+    0%
+        opacity: 0
+
+    25%
+        opacity: 1
+
+    50% 
+        opacity: 0
+
+    75% 
+        opacity: 1
+        
+    100%
+        opacity: 0
+        
