--- a/styles_for_tablet/tablet.sass
+++ b/styles_for_tablet/tablet.sass
@@ -31,6 +31,7 @@
             right: 4.5%
             height: 100px
             width: 100px
+            border: 6px solid black
             border-radius: 50%
             background-color: red
             animation: recording 2s infinite
