--- a/styles_for_tablet/tablet.css
+++ b/styles_for_tablet/tablet.css
@@ -44,6 +44,7 @@
   right: 4.5%;
   height: 100px;
   width: 100px;
+  border: 6px solid black;
   border-radius: 50%;
   background-color: red;
   -webkit-animation: recording 2s infinite;
