--- a/styles_for_mask/mask.sass
+++ b/styles_for_mask/mask.sass
@@ -3,6 +3,7 @@
     bottom: -10000px
     height: 100%
     width: 100%
+    border: 6px solid black
     border-top-left-radius: 25%
     border-top-right-radius: 25% 
     background-image: url(/textures/mask.png)
