--- a/styles_for_mask/mask.sass
+++ b/styles_for_mask/mask.sass
@@ -6,7 +6,7 @@
     border: 6px solid black
     border-top-left-radius: 25%
     border-top-right-radius: 25% 
-    background-image: url(/textures/mask.png)
+    background-image: url(./textures/mask.png)
     background-size: 100% 110%
     transition: 0.25s
     z-index: 2
